fix review findings